minor edit to sammy phrase generator

--- a/phrases/sammy/index.html
+++ b/phrases/sammy/index.html
@@ -24,7 +24,7 @@
         //title[i++] = "Master";
         //title[i++] = "Princess";
         //title[i++] = "Darth";
-        //title[i++] = "Dr";
+        title[i++] = "Dr";
         //title[i++] = "Nurse";
         var ntitle = i;
         i = 0;
@@ -37,6 +37,7 @@
         namearr[i++] = "Ladybug";
         namearr[i++] = "Beach ball";
         namearr[i++] = "Work bench";
+        namearr[i++] = "Miniscule";
         var nname = i;
         i = 0;
         var adjective = [];
@@ -113,7 +114,7 @@
                 <br />
                 <p>
                 <div class="image">
-                <img src="shuttle.gif" alt="me" width="40%"
+                <img src="shuttle.gif" alt="me" width="60%"
                 style="float:right;min-width:100px;margin: 10px 0px 0px
                 10px">
             </div>
