minor edit to sammy phrase generator

--- a/phrases/sammy/index.html
+++ b/phrases/sammy/index.html
@@ -19,12 +19,12 @@
         title[i++] = "Queen";
         title[i++] = "King";
         title[i++] = "Professor";
+        title[i++] = "Dr";
         //title[i++] = "President";
         //title[i++] = "Prime Minister";
         //title[i++] = "Master";
         //title[i++] = "Princess";
         //title[i++] = "Darth";
-        title[i++] = "Dr";
         //title[i++] = "Nurse";
         var ntitle = i;
         i = 0;
@@ -37,22 +37,23 @@
         namearr[i++] = "Ladybug";
         namearr[i++] = "Beach ball";
         namearr[i++] = "Work bench";
-        namearr[i++] = "Miniscule";
+        namearr[i++] = "Dr Miniscule";
+        namearr[i++] = "T. Rex";
         var nname = i;
         i = 0;
         var adjective = [];
         adjective[i++] = "super silly";
         adjective[i++] = "cool";
         adjective[i++] = "totally awesome";
-        <!--adjective[i++] = "stinky";-->
         adjective[i++] = "the best";
+        adjective[i++] = "Crazy";
+        adjective[i++] = "funny";
+        adjective[i++] = "scary";
+        <!--adjective[i++] = "stinky";-->
         <!--adjective[i++] = "dumb as a spud";-->
         <!--adjective[i++] = "embarrassing";-->
         <!--adjective[i++] = "super smart";-->
         <!--adjective[i++] = "interesting";-->
-        adjective[i++] = "crazy";
-        adjective[i++] = "funny";
-        adjective[i++] = "scary";
         var nadjective = i;
         i = 0;
         var punctuation = [];
