changed links to https.

--- a/mcalgorithms/contact.html
+++ b/mcalgorithms/contact.html
@@ -19,13 +19,13 @@
 <link type="text/css" rel="stylesheet" media="all" href="modules/print/css/printlinks44c2.css?P" />
 <link type="text/css" rel="stylesheet" media="all" href="sites/default/files/color/garland-eeb09ab8/style44c2.css?P" />
 <link type="text/css" rel="stylesheet" media="print" href="themes/garland/print44c2.css?P" />
-    <script type="text/javascript" src="misc/jquery44c2.js?P"></script>
-<script type="text/javascript" src="misc/drupal44c2.js?P"></script>
-<script type="text/javascript">
-<!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, { "basePath": "/mcalgorithms/", "googleanalytics": { "trackOutgoing": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip" } });
-//--><!]]>
-</script>
+    <!--<script type="text/javascript" src="misc/jquery44c2.js?P"></script>-->
+<!--<script type="text/javascript" src="misc/drupal44c2.js?P"></script>-->
+<!--<script type="text/javascript">-->
+<!--[>//<]<![CDATA[//><!---->
+<!--jQuery.extend(Drupal.settings, { "basePath": "/mcalgorithms/", "googleanalytics": { "trackOutgoing": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip" } });-->
+<!--//--><!]]>-->
+<!--</script>-->
     <!--[if lt IE 7]>
       <link type="text/css" rel="stylesheet" media="all" href="/mcalgorithms/themes/garland/fix-ie.css" />    <![endif]-->
   </head>
@@ -85,7 +85,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/mcalgorithms/", "googleanalytics"
     <h3>Organisers</h3>
 <table>
 <tr>
-<td> Nathan Clisby (<a href="http://clisby.net/">homepage</a>)</td> <td> University of Melbourne</td>
+<td> Nathan Clisby (<a href="https://clisby.net/">homepage</a>)</td> <td> University of Melbourne</td>
 </tr>
 <tr>
 <td> Tim Garoni (<a href="http://users.monash.edu.au/~garonit/">homepage</a>)</td> <td> University of Melbourne</td>
