--- a/projects/hamiltonian_path/index.html
+++ b/projects/hamiltonian_path/index.html
@@ -98,7 +98,7 @@
 <!--<div style="text-align:left;width:800px">-->
 <p>
 <b>Author:</b> Nathan Clisby, November 2014
-(<a href="http://clisby.net/">homepage</a>, <a
+(<a href="https://clisby.net/">homepage</a>, <a
 href="mailto:clisby@gmail.com">clisby@gmail.com</a>).
 Link to an <a href="hamiltonian_path_v1.html">earlier version</a>. Note:
 both the implementation of the algorithm and the appearance have been
