--- a/projects/sm_simulator/index.html
+++ b/projects/sm_simulator/index.html
@@ -111,7 +111,7 @@
         <!--<p>Statistical mechanics simulator due to <a href="http://lattice.complex.unimelb.edu.au/home/">Nathan Clisby</a>, 2013.</p>-->
         <p>
         <b>Author:</b> Nathan Clisby, 2013
-        (<a href="http://clisby.net/">homepage</a>, <a
+        (<a href="https://clisby.net/">homepage</a>, <a
             href="mailto:clisby@gmail.com">clisby@gmail.com</a>).
         </p>
         <p>The statistical mechanics simulator provides a platform for
