--- a/poll/index.html
+++ b/poll/index.html
@@ -1,3 +1,6 @@
 <head>
-  <meta http-equiv='refresh' content='0; URL=https://directpoll.com/v?XDVhEtVHwIkFDmLnT5qSv3cDs7c3W5kY9b2'>
+  <!--2018, semester 2:-->
+  <!-- <meta http-equiv='refresh' content='0; URL=https://directpoll.com/v?XDVhEtVHwIkFDmLnT5qSv3cDs7c3W5kY9b2'> -->
+  <!--2019, semester 2:-->
+  <meta http-equiv='refresh' content='0; URL=https://directpoll.com/v?XDVhEtoHkbvHGB0qOdQmJlwWoN9jNpF'>
 </head>
