--- a/poll/index.html
+++ b/poll/index.html
@@ -5,5 +5,6 @@
     <!--2018, semester 2:-->
     <!-- <meta http-equiv='refresh' content='0; URL=https://directpoll.com/v?XDVhEtVHwIkFDmLnT5qSv3cDs7c3W5kY9b2'> -->
     <!--2019, semester 2:-->
-    <meta http-equiv='refresh' content='0; URL=https://directpoll.com/v?XDVhEtoHkbvHGB0qOdQmJlwWoN9jNpF'>
+    <!--<meta http-equiv='refresh' content='0; URL=https://directpoll.com/v?XDVhEtoHkbvHGB0qOdQmJlwWoN9jNpF'>-->
+    <meta http-equiv='refresh' content='0; URL=https://directpoll.com/v?XDVhEtBAhOja8Q3Z2bBkxLg7mE2VER'>
 </head>
