Updated recent articles on landing page. Deleted some links on the links page.

--- a/index.html
+++ b/index.html
@@ -72,9 +72,23 @@
                 <p>
             Here you will find some details about my <a href="/research/">research</a> (including
                 lists of possible research <a href="/research/topics/">topics</a> for students and collaborators, and my <a href="/research/publications/">publications</a>),
-                and various <a href="/projects/">project</a> pages where you can find interactive applications, visualisations, 
-                and in future software for download. 
+                and various <a href="/projects/">project</a> pages where you can
+                find interactive applications and visualisations.
                 </p>
+                <p>
+                Quick links: <a
+                    href="https://scholar.google.com.au/citations?hl=en&user=8kHXJhAAAAAJ">Google
+                    Scholar</a>;
+                <a
+                    href="http://localhost/projects/sm_simulator/">
+                    visualisation of the pivot algorithm</a>
+                for sampling self-avoiding walks;
+                <a
+                    href="http://localhost/projects/hamiltonian_path/">visualisation
+                    of the backbite algorithm</a> for sampling
+                Hamiltonian paths.
+                </p>
+                <!-- and in future software for download. --> 
                 <!--<p>-->
                 <!--This is a long overdue overhaul of my <a href="http://lattice.complex.unimelb.edu.au/home/">old homepage</a>,-->
                 <!--which had fallen into disrepair. With the goal of-->
@@ -88,51 +102,95 @@
                 <!--</p>-->
 
                 <p>
-                <b>Recent updates (March 2017)</b>
+                </p>
+                <p>
+                <b>Recent articles (April 2021)</b>
                 </p>
                 <ul>
-                <li>
-                Simulations of SAWs in 4d have enabled the calculation
-                of the logarithmic corrections to great accuracy:
-                <i>Monte Carlo study of four-dimensional
-                self-avoiding walks of up to one billion steps</i>,
-                <a href="https://arxiv.org/abs/1703.10557">arXiv:1703.10557</a> (2017).
-                </li>
-                <li>
-                By using the length-doubling algorithm and a novel series
-                analysis method (due to Tony Guttmann), 
-                we have obtained
-                accurate estimates of various quantities associated with
-                SAWs on the BCC and FCC lattices: <i>Exact enumeration of
-                    self-avoiding walks on BCC and FCC lattices</i>, <a
-                    href="http://arxiv.org/abs/1703.09340">arXiv:1703.09340</a>
-                (2017).
-                (Work with Raoul D. Schram,
-                Gerard T. Barkema, and Rob H. Bisseling.)
-                </li>
-                <li>
-                By using a novel ``scale-free'' version of the pivot
-                algorithm, I have been able to calculate an extremely
-                accurate estimate for the critical exponent &gamma; for
-                self-avoiding walks, obtaining &gamma; = 1.15695300(95).
-                The paper is: <i>Scale-free Monte Carlo method for
-                calculating the critical exponent &gamma; of
-                self-avoiding walks</i>,  <a
-                    href="http://arxiv.org/abs/1701.08415">arXiv:1701.08415</a>
-                (2017).
-                </li>
-                <li>
-                With Burkhard D&uuml;nweg, I've published a paper which
-                includes an accurate calculation of the hydrodynamic
-                radius for SAWs, and calculates the Flory exponent to
-                unprecedented accuracy, &nu; = 0.58759700(40):
-                <i>High precision estimate of the hydrodynamic
-                    radius for self-avoiding walks</i>, 
-                <a
-                    href="https://doi.org/10.1103/PhysRevE.94.052102">Phys.
-                    Rev. E.</a> <b>94</b>: 052102 (2016).
-        It was chosen as an <a
-            href="http://journals.aps.org/pre#suggestions">Editor's suggestion</a>.
+                    <li>
+                    Nathan Clisby, <i>Enumerative Combinatorics of Lattice Polymers</i>,
+                    <a
+                        href="https://www.ams.org/journals/notices/202104/rnoti-p504.pdf">Notices
+                        of the AMS</a>, <b>68:</b> 504-515 (2021).
+                    </li>
+                    <li>
+                    Ian Enting and Nathan Clisby,
+                    <i>On comparing greenhouse gas emission metrics</i>,
+                    <a href="https://acp.copernicus.org/articles/21/4699/2021/">
+                        Atmos. Chem. Phys.</a>
+                    <b>21</b>: 4699-4708 (2021).
+                    </li>
+                    <li>
+                    Luca Maffioli, Nathan Clisby, Federico Frascoli, and B. D.
+                    Todd,
+                    <i>The phase space distribution of confined fluids under shear is not fractal</i>,
+                <a href="https://doi.org/10.1063/5.0039192">J. Chem. Phys.</a>
+                <b>154</b>: 094116 (2021).
+                    </li>
+                    <li>
+                    Nathan Clisby and Dac Thanh Chuong Ho,
+                    <i>Off-lattice and parallel implementations of the pivot
+                        algorithm</i>,
+                    <a
+                        href="https://arxiv.org/abs/2001.02186">arXiv:2001.02186</a>
+                    (2020).
+                    </li>
+                    <li>
+                    Nathan Clisby, <i>Monte Carlo study of four-dimensional
+                        self-avoiding walks of up to one billion steps</i>,
+                    <a href="https://doi.org/10.1007/s10955-018-2049-2">
+                        J. Stat. Phys.</a> <b>172</b>: 477-492,
+                    <a
+                        href="https://arxiv.org/abs/1703.10557">arXiv:1703.10557</a>
+                    (2018).
+                    </li>
+                </ul>
+                <!-- <p> -->
+                <!-- <b>Recent updates (March 2017)</b> -->
+                <!-- </p> -->
+                <!-- <ul> -->
+                <!-- <li> -->
+                <!-- Simulations of SAWs in 4d have enabled the calculation -->
+                <!-- of the logarithmic corrections to great accuracy: -->
+                <!-- <i>Monte Carlo study of four-dimensional -->
+                <!-- self-avoiding walks of up to one billion steps</i>, -->
+                <!-- <a href="https://arxiv.org/abs/1703.10557">arXiv:1703.10557</a> (2017). -->
+                <!-- </li> -->
+                <!-- <li> -->
+                <!-- By using the length-doubling algorithm and a novel series -->
+                <!-- analysis method (due to Tony Guttmann), --> 
+                <!-- we have obtained -->
+                <!-- accurate estimates of various quantities associated with -->
+                <!-- SAWs on the BCC and FCC lattices: <i>Exact enumeration of -->
+                <!--     self-avoiding walks on BCC and FCC lattices</i>, <a -->
+                <!--     href="http://arxiv.org/abs/1703.09340">arXiv:1703.09340</a> -->
+                <!-- (2017). -->
+                <!-- (Work with Raoul D. Schram, -->
+                <!-- Gerard T. Barkema, and Rob H. Bisseling.) -->
+                <!-- </li> -->
+                <!-- <li> -->
+                <!-- By using a novel ``scale-free'' version of the pivot -->
+                <!-- algorithm, I have been able to calculate an extremely -->
+                <!-- accurate estimate for the critical exponent &gamma; for -->
+                <!-- self-avoiding walks, obtaining &gamma; = 1.15695300(95). -->
+                <!-- The paper is: <i>Scale-free Monte Carlo method for -->
+                <!-- calculating the critical exponent &gamma; of -->
+                <!-- self-avoiding walks</i>,  <a -->
+                <!--     href="http://arxiv.org/abs/1701.08415">arXiv:1701.08415</a> -->
+                <!-- (2017). -->
+                <!-- </li> -->
+                <!-- <li> -->
+                <!-- With Burkhard D&uuml;nweg, I've published a paper which -->
+                <!-- includes an accurate calculation of the hydrodynamic -->
+                <!-- radius for SAWs, and calculates the Flory exponent to -->
+                <!-- unprecedented accuracy, &nu; = 0.58759700(40): -->
+                <!-- <i>High precision estimate of the hydrodynamic -->
+                <!--     radius for self-avoiding walks</i>, --> 
+                <!-- <a -->
+                <!--     href="https://doi.org/10.1103/PhysRevE.94.052102">Phys. -->
+                <!--     Rev. E.</a> <b>94</b>: 052102 (2016). -->
+        <!-- It was chosen as an <a -->
+            <!-- href="http://journals.aps.org/pre#suggestions">Editor's suggestion</a>. -->
                 </li>
                 <!--<b>Recent updates (November 2016)</b>-->
                 <!--<p>-->
@@ -166,15 +224,15 @@
                 <!--to some fascinating talks, at the <a-->
                     <!--href="entingfest">Entingfest</a> webpage.-->
                 <!--</p>-->
-                <li>
-<a
-    href="https://scholar.google.com.au/citations?hl=en&user=vLenKQMAAAAJ">Jason
-    Whyte</a> has written a feature article which gives a detailed
-but accessible explanation on the ingredients for fast Monte Carlo
-simulation of self-avoiding walks. Please see 
-the <a href="/projects/saw_feature/">SAW feature</a> page.
-                </li>
-                </ul>
+                <!-- <li> -->
+<!-- <a -->
+<!--     href="https://scholar.google.com.au/citations?hl=en&user=vLenKQMAAAAJ">Jason -->
+<!--     Whyte</a> has written a feature article which gives a detailed -->
+<!-- but accessible explanation on the ingredients for fast Monte Carlo -->
+<!-- simulation of self-avoiding walks. Please see --> 
+<!-- the <a href="/projects/saw_feature/">SAW feature</a> page. -->
+                <!-- </li> -->
+                <!-- </ul> -->
                 <!--<h3>Updates</h3>-->
                 <!--[><table width="100%" style="table-layout:fixed;"><]-->
                 <!--<table>-->
