--- a/links/index.html
+++ b/links/index.html
@@ -54,7 +54,7 @@
                 </h1>
                 <p>
                 A collection of links to things I find interesting and
-                useful.
+                useful. (Not maintained/updated.)
                 </p>
                 <!--<p>-->
                 <!--These links are from my old webpage, and are several-->
@@ -98,24 +98,24 @@
                 href=""></a></td> <td><a href=""></a></td></tr>
 </table>
 
-<table width="100%" style="table-layout:fixed;">
-    <tr> <th colspan="4"> Entertainment </th> </tr>
-    <tr><td><a href="http://www.imdb.com">IMDB</a></td> <td><a
-                href="http://kids.niehs.nih.gov/">NIEHS Kids</a></td>
-        <td><a href="http://www.theonion.com/content/index">The
-                Onion</a></td> <td><a
-                href="http://www.phdcomics.com/comics.php">PhD
-                Comics</a></td></tr>
-    <tr><td><a href="http://www.sluggy.com/">Sluggy Freelance</a></td>
-        <td><a href="http://www.dilbert.com/">Dilbert</a></td> <td><a
-                href="http://www.nukees.com/">Nukees</a></td> <td><a
-                href="http://www.theage.com.au/opinion/danny-katz">Danny
-                Katz</a></td></tr>
-    <tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a
-                href=""></a></td> <td><a href=""></a></td></tr>
-    <tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a
-                href=""></a></td> <td><a href=""></a></td></tr>
-</table>
+<!-- <table width="100%" style="table-layout:fixed;"> -->
+<!--     <tr> <th colspan="4"> Entertainment </th> </tr> -->
+<!--     <tr><td><a href="http://www.imdb.com">IMDB</a></td> <td><a -->
+<!--                 href="http://kids.niehs.nih.gov/">NIEHS Kids</a></td> -->
+<!--         <td><a href="http://www.theonion.com/content/index">The -->
+<!--                 Onion</a></td> <td><a -->
+<!--                 href="http://www.phdcomics.com/comics.php">PhD -->
+<!--                 Comics</a></td></tr> -->
+<!--     <tr><td><a href="http://www.sluggy.com/">Sluggy Freelance</a></td> -->
+<!--         <td><a href="http://www.dilbert.com/">Dilbert</a></td> <td><a -->
+<!--                 href="http://www.nukees.com/">Nukees</a></td> <td><a -->
+<!--                 href="http://www.theage.com.au/opinion/danny-katz">Danny -->
+<!--                 Katz</a></td></tr> -->
+<!--     <tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a -->
+<!--                 href=""></a></td> <td><a href=""></a></td></tr> -->
+<!--     <tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a -->
+<!--                 href=""></a></td> <td><a href=""></a></td></tr> -->
+<!-- </table> -->
 
 <table width="100%" style="table-layout:fixed;">
     <tr> <th colspan="4"> Institutions </th> </tr>
@@ -139,7 +139,7 @@
                 href="http://www.acm.org/">ACM</a></td> <td><a
                 href="http://www.iamp.org/">IAMP</a></td></tr>
     <tr><td><a href="http://www.iop.org/">IOP</a></td> <td><a
-                href=""></a></td> <td><a href=""></a></td> <td><a
+                href=""https://www.swinburne.edu.au/>Swinburne</a></td> <td><a href=""></a></td> <td><a
                 href=""></a></td></tr>
     <tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a
                 href=""></a></td> <td><a href=""></a></td></tr>
@@ -264,18 +264,18 @@
                 href=""></a></td> <td><a href=""></a></td></tr>
 </table>
 
-<table width="100%" style="table-layout:fixed;">
-    <tr> <th colspan="4"> "My" pages (at least, pages I've created)
-    </th> </tr>
-    <tr> <td><a
-                href="http://lattice.complex.unimelb.edu.au/mcalgorithms/">Monte
-                Carlo algorithms conference</a></td> <td><a
-                href="http://peterclisby.blogspot.com/">Peter Clisby
-                campaign page</a></td> <td><a
-                href="http://sites.google.com/site/mcforaeuntpresident/">Matthew
-                Cranitch campaign page</a></td></tr>
-    <td></td>
-</table>
+<!-- <table width="100%" style="table-layout:fixed;"> -->
+<!--     <tr> <th colspan="4"> "My" pages (at least, pages I've created) -->
+<!--     </th> </tr> -->
+<!--     <tr> <td><a -->
+<!--                 href="http://lattice.complex.unimelb.edu.au/mcalgorithms/">Monte -->
+<!--                 Carlo algorithms conference</a></td> <td><a -->
+<!--                 href="http://peterclisby.blogspot.com/">Peter Clisby -->
+<!--                 campaign page</a></td> <td><a -->
+<!--                 href="http://sites.google.com/site/mcforaeuntpresident/">Matthew -->
+<!--                 Cranitch campaign page</a></td></tr> -->
+<!--     <td></td> -->
+<!-- </table> -->
 
 
 
