Updated one word on landing page

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <p>
                 </p>
                 <p>
-                <b>Recent articles (April 2021)</b>
+                <b>Recent articles (updated April 2021)</b>
                 </p>
                 <ul>
                     <li>
