Simplified: Removed snippets, removed bottom footer, updated header so that colour is the same as body. Also, utf8 for SAW feature

--- a/entingfest/index.html
+++ b/entingfest/index.html
@@ -269,7 +269,7 @@ after a year in the job!
 <br/>
 <br/>
             <p style="font-size:0.8em">
-            This webpage is still under development. If you have any
+            If you have any
             comments or (especially) photos please contact <a
                 href="mailto:clisby@gmail.com">Nathan Clisby (clisby@gmail.com)</a>.
             </p>
