--- a/projects/lrw/index.html
+++ b/projects/lrw/index.html
@@ -184,7 +184,7 @@ Min size: <input type="checkbox" name="min_size" id="min_size" value="min_size" 
 <!--[></center><]-->
         <!--</div> [> content <]-->
     <!--</div> [> contentblock <]-->
-    <!--<div id="push"></div>-->
+    <div id="push"></div>
     <!--</div> [> topwrapper <]-->
     <!--<div id="bottombar">-->
             <!--<div id="footer">-->
