--- a/projects/saw_feature/index.html
+++ b/projects/saw_feature/index.html
@@ -24,6 +24,7 @@
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    <meta charset="UTF-8">
     <!--mathjax - enable $ as delimiter -->
     <script type="text/x-mathjax-config"> MathJax.Hub.Config({ tex2jax:
         { inlineMath: [ ['$','$'], ["\\(","\\)"] ], processEscapes: true
@@ -730,19 +731,19 @@ for which knots become prevalent in polymers.<a
     href="#fnref10">↩</a></p></li>
 </ol>
 </div>
-            <div class="spacer"></div>
-            <div class="spacer"></div>
-            <div class="spacer"></div>
+            <!-- <div class="spacer"></div> -->
+            <!-- <div class="spacer"></div> -->
+            <!-- <div class="spacer"></div> -->
         </div> <!-- content -->
     </div> <!-- contentblock -->
     <div id="push"></div>
     </div> <!-- topwrapper -->
-    <div id="bottombar">
-            <div id="footer">
-               <div id="footquote">
-                    <script src="/includesnippet.js"></script>
-                </div>
-            </div> <!-- footer -->
-    </div> <!-- bottombar -->
+    <!-- <div id="bottombar"> -->
+    <!--         <div id="footer"> -->
+    <!--            <div id="footquote"> -->
+    <!--                 <script src="/includesnippet.js"></script> -->
+    <!--             </div> -->
+    <!--         </div> <1!-- footer --1> -->
+    <!-- </div> <1!-- bottombar --1> -->
     </body>
 </html>
