--- a/projects/snake_puzzle/index.html
+++ b/projects/snake_puzzle/index.html
@@ -151,23 +151,23 @@
             grid sampled via the backbite algorithm, and printed in
             steel by Shapeways.
                 </p>
-                <br/>
-                <br/>
-                <br/>
-                <br/>
-                <br/>
-                <br/>
+                <!-- <br/> -->
+                <!-- <br/> -->
+                <!-- <br/> -->
+                <!-- <br/> -->
+                <!-- <br/> -->
+                <!-- <br/> -->
 
         </div> <!-- content -->
     </div> <!-- contentblock -->
     <div id="push"></div>
     </div> <!-- topwrapper -->
-    <div id="bottombar">
-            <div id="footer">
-               <div id="footquote">
-                    <script src="/includesnippet.js"></script>
-                </div>
-            </div> <!-- footer -->
-    </div> <!-- bottombar -->
+    <!-- <div id="bottombar"> -->
+    <!--         <div id="footer"> -->
+    <!--            <div id="footquote"> -->
+    <!--                 <script src="/includesnippet.js"></script> -->
+    <!--             </div> -->
+    <!--         </div> <1!-- footer --1> -->
+    <!-- </div> <1!-- bottombar --1> -->
     </body>
 </html>
