--- a/projects/hamiltonian_path_tri/index.html
+++ b/projects/hamiltonian_path_tri/index.html
@@ -314,15 +314,15 @@ rejected. This Markov chain selects 1 and 2 with uniform probability,
 <!--</center>-->
         </div> <!-- content -->
     </div> <!-- contentblock -->
-    <div id="push"></div>
+    <!-- <div id="push"></div> -->
     </div> <!-- topwrapper -->
-    <div id="bottombar">
-            <div id="footer">
-               <div id="footquote">
-                    <script src="/includesnippet.js"></script>
-                </div>
-            </div> <!-- footer -->
-    </div> <!-- bottombar -->
+    <!-- <div id="bottombar"> -->
+    <!--         <div id="footer"> -->
+    <!--            <div id="footquote"> -->
+    <!--                 <script src="/includesnippet.js"></script> -->
+    <!--             </div> -->
+    <!--         </div> <1!-- footer --1> -->
+    <!-- </div> <1!-- bottombar --1> -->
 </body>
 </html>
 
