--- a/projects/pebble_app/index.html
+++ b/projects/pebble_app/index.html
@@ -103,20 +103,20 @@ this recently compiled (February,
 I'll make it available on the Pebble app store, if anyone seems to
 like it!
                 </p>
-                <br />
-                <br />
-                <br />
+                <!-- <br /> -->
+                <!-- <br /> -->
+                <!-- <br /> -->
 
         </div> <!-- content -->
     </div> <!-- contentblock -->
     <div id="push"></div>
     </div> <!-- topwrapper -->
-    <div id="bottombar">
-            <div id="footer">
-               <div id="footquote">
-                    <script src="/includesnippet.js"></script>
-                </div>
-            </div> <!-- footer -->
-    </div> <!-- bottombar -->
+    <!-- <div id="bottombar"> -->
+    <!--         <div id="footer"> -->
+    <!--            <div id="footquote"> -->
+    <!--                 <script src="/includesnippet.js"></script> -->
+    <!--             </div> -->
+    <!--         </div> <1!-- footer --1> -->
+    <!-- </div> <1!-- bottombar --1> -->
     </body>
 </html>
