--- a/projects/saw_videos/index.html
+++ b/projects/saw_videos/index.html
@@ -157,19 +157,19 @@
                 </p>
             </div> <!-- center -->
         </div> <!-- video block -->
-            <div class="spacer"></div>
-            <div class="spacer"></div>
-            <div class="spacer"></div>
+            <!-- <div class="spacer"></div> -->
+            <!-- <div class="spacer"></div> -->
+            <!-- <div class="spacer"></div> -->
         </div> <!-- content -->
     </div> <!-- contentblock -->
     <div id="push"></div>
     </div> <!-- topwrapper -->
-    <div id="bottombar">
-            <div id="footer">
-               <div id="footquote">
-                    <script src="/includesnippet.js"></script>
-                </div>
-            </div> <!-- footer -->
-    </div> <!-- bottombar -->
+    <!-- <div id="bottombar"> -->
+    <!--         <div id="footer"> -->
+    <!--            <div id="footquote"> -->
+    <!--                 <script src="/includesnippet.js"></script> -->
+    <!--             </div> -->
+    <!--         </div> <1!-- footer --1> -->
+    <!-- </div> <1!-- bottombar --1> -->
     </body>
 </html>
