--- a/research/topics/index.html
+++ b/research/topics/index.html
@@ -352,12 +352,12 @@ especially given that the technology is changing so quickly.
     </div> <!-- contentblock -->
     <div id="push"></div>
     </div> <!-- topwrapper -->
-    <div id="bottombar">
-            <div id="footer">
-               <div id="footquote">
-                    <script src="/includesnippet.js"></script>
-                </div>
-            </div> <!-- footer -->
-    </div> <!-- bottombar -->
+    <!-- <div id="bottombar"> -->
+    <!--         <div id="footer"> -->
+    <!--            <div id="footquote"> -->
+    <!--                 <script src="/includesnippet.js"></script> -->
+    <!--             </div> -->
+    <!--         </div> <1!-- footer --1> -->
+    <!-- </div> <1!-- bottombar --1> -->
 </body>
 </html>
