--- a/projects/backtracker/index.html
+++ b/projects/backtracker/index.html
@@ -52,7 +52,7 @@
             <ul>
                 <li><a href="/projects/snake_puzzle/">(3d printed puzzle)</a></li>
                 <li><a href="/projects/pebble_app/">(pebble app)</a></li>
-                <li><a href="/projects/saw_feature/">(saw feature)</a></li>
+                <li><a href="/projects/saw_feature/">(SAW feature)</a></li>
             </ul>
         </div> <!-- bnav -->
     </div> <!-- topbar -->
