made youtube embed link https in saw videos.

--- a/projects/saw_videos/index.html
+++ b/projects/saw_videos/index.html
@@ -152,7 +152,7 @@
             simple cubic lattice.<br/>
             <div style="margin-left:auto;margin-right:auto;">
                 <iframe width="560" height="315"
-                    src="http://www.youtube.com/embed/GHzfadEuk1U?start=20"
+                    src="https://www.youtube.com/embed/GHzfadEuk1U?start=20"
                     frameborder="0" allowfullscreen></iframe>
                 </p>
             </div> <!-- center -->
