--- a/projects/saw_videos/index.html
+++ b/projects/saw_videos/index.html
@@ -96,9 +96,9 @@
         <p>
             I've made some high resolution videos on YouTube of self-avoiding walks with 100 million
             steps on the square lattice (YouTube <a
-                href="http://www.youtube.com/watch?v=WPUH8Rs-oig">link</a>) and simple cubic
+                href="https://www.youtube.com/watch?v=WPUH8Rs-oig">link</a>) and simple cubic
             lattice (YouTube <a
-                href="http://www.youtube.com/watch?v=GHzfadEuk1U">link</a>, embedded <a href="#saw3d">below</a>). 
+                href="https://www.youtube.com/watch?v=GHzfadEuk1U">link</a>, embedded <a href="#saw3d">below</a>). 
             Both videos look much better in HD, so choose the
             highest resolution your screen and internet connection will support.
             </p>
@@ -132,7 +132,7 @@
             <p>
             Zoomable high resolution images of self-avoiding walks
             in 2, 3, and 4 dimensions available in my Gigapan <a
-                href="http://gigapan.com/galleries/9173/gigapans">self-avoiding
+                href="https://gigapan.com/galleries/9173/gigapans">self-avoiding
                 walk gallery</a>. The 2d walks are very sparse which
             makes them hard to see. One future project I have in mind is
             to create a javascript or Processing tool for viewing fractal images which
