Updated SAW Google Drive link

--- a/projects/saw_videos/index.html
+++ b/projects/saw_videos/index.html
@@ -125,8 +125,7 @@
             <p>
             Various images of self-avoiding walks available in a Google
             Drive collection
-            <a
-                href="https://drive.google.com/folderview?id=0B99otwie9pb8REdJY1llVVZwek0&usp=sharing">here</a>.
+            <a href="https://drive.google.com/drive/folders/0B99otwie9pb8REdJY1llVVZwek0?resourcekey=0-Xwu6eC4owApnDZ9vGv4lOw&usp=sharing">here</a>.
             I have a few other images floating around.
             </p>
             <p>
