Updated SAW Google Drive link

--- a/projects/saw_videos/index.html
+++ b/projects/saw_videos/index.html
@@ -79,8 +79,8 @@
                 <br/>
                 <p class="caption">Animation of
                     self-avoiding walk of 1048576 steps on the simple
-                    cubic lattice <a
-                        href="https://drive.google.com/folderview?id=0B99otwie9pb8REdJY1llVVZwek0&usp=sharing">(higher res)</a>. Also, see the <a href="../sm_simulator/">statistical mechanics simulator</a>.
+                    cubic lattice <a href="https://drive.google.com/drive/folders/0B99otwie9pb8REdJY1llVVZwek0?resourcekey=0-Xwu6eC4owApnDZ9vGv4lOw&usp=sharing">
+                        (higher res)</a>. Also, see the <a href="../sm_simulator/">statistical mechanics simulator</a>.
                     </p>
             </div> 
             <br/>
