Added Google Alerts page

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
                 <!--</p>-->
 
                 <p>
+                <b>18 October, 2021:</b> I've created a howto guide on setting up <a href="teaching/alerts">
+                    Google Alerts for detection of contract cheating</a>.
                 </p>
                 <p>
                 <b>Recent articles (updated April 2021)</b>
