--- a/teaching/alerts/index.html
+++ b/teaching/alerts/index.html
@@ -71,7 +71,8 @@ Science and Technology, DOI: <a href="https://dx.doi.org/10.1080/0020739X.2021.1
                 </p>
                 <p>
                 And, the material on this webpage was prepared as a <a
-                    href="clisby_edwards_google_alerts.pdf">pdf presentation</a> for a roundtable discussion at
+                    href="clisby_edwards_google_alerts.pdf">pdf presentation</a>
+                by Ant Edwards and me for a roundtable discussion at
                 the <a
                     href="https://torrens.eventsair.com/aain-forum2021/">Australian
                     Academic Integrity Network Forum 2021</a>.
