--- a/teaching/alerts/index.html
+++ b/teaching/alerts/index.html
@@ -169,8 +169,10 @@ fragments from the assessment.
                     <li>
                     We have received various alerts from <a
                         href="https://chegg.com">Chegg</a> that have detected cheating.
-                    (False positives came from websites including: <a href="https://quizlet.com/">Quizlet</a>,
-                    <a href="https://brainly.com/">Brainly</a>, 4chan, <a
+                    (False positives came from websites including: 
+                    <a href="https://www.coursehero.com">Course Hero</a>,
+                    <a href="https://quizlet.com/">Quizlet</a>,
+                    <a href="https://brainly.com/">Brainly</a>, <a
                         href="https://www.numerade.com/">Numerade</a>, <a
                         href="https://byjus.com/">Byjus</a>, <a
                         href="https://www.gauthmath.com/en">Gauthmath</a>.)
