--- a/teaching/index.html
+++ b/teaching/index.html
@@ -64,8 +64,7 @@
             <a href="alerts/">alerts</a> page which contains instructions for
             setting up Google Alerts to quickly and easily detect some instances
             of improper sharing of assessment
-            questions to websites (particularly Chegg, and potentially for 
-            Quizlet, Brainly, 4chan, Numerade, Byjus, Gauthmath).
+            questions to websites.
             </p>
         </div> <!-- content -->
     </div> <!-- contentblock -->
