--- a/teaching/index.html
+++ b/teaching/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <title>teaching</title>
-    <link rel="canonical" href="/research/" />
-    <meta name="description" content="Research section of Nathan
-    Clisby's homepage, provides a synopsis of his research and links to
-    a list of publications and detailed research topics.">
+    <link rel="canonical" href="/teaching/" />
+    <meta name="description" content="Teaching section of Nathan
+    Clisby's homepage.">
     <link rel="stylesheet" type="text/css" href="/css/nc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
