--- a/teaching/alerts/index.html
+++ b/teaching/alerts/index.html
@@ -64,7 +64,8 @@
                 any discipline.
                 </p>
                 <p>
-                This tip is mentioned in the following publication: Nathan Clisby &amp; Antony Edwards (2021) 
+                This tip is mentioned in the following publication: 
+                Nathan Clisby &amp; Antony Edwards (2021) 
                 <b>Individualized summative assessments as
                     used during COVID-19</b>, International Journal of Mathematical Education in
 Science and Technology, DOI: <a href="https://dx.doi.org/10.1080/0020739X.2021.1982040">10.1080/0020739X.2021.1982040</a>
@@ -194,6 +195,27 @@ up with any email address.
 can occur purely based on question that has been shared.
                     </li>
                 </ul>
+                <h2>
+                    An incomplete list of references on automatic detection of
+                    contract cheating
+                </h2>
+                <ul>
+                    <li>
+                    Thomas Lancaster &amp; Robert Clarke (2016)
+                <b>Contract Cheating: The Outsourcing of Assessed Student
+                    Work</b>, in Bretag T. (eds) Handbook of Academic Integrity. Springer, Singapore.
+                DOI: <a
+                    href="https://doi.org/10.1007/978-981-287-098-8_17">10.1007/978-981-287-098-8_17</a>
+                </li>
+                    <li>
+                Nathan Clisby &amp; Antony Edwards (2021) 
+                <b>Individualized summative assessments as
+                    used during COVID-19</b>, International Journal of Mathematical Education in
+Science and Technology, DOI: <a href="https://dx.doi.org/10.1080/0020739X.2021.1982040">10.1080/0020739X.2021.1982040</a>
+                </li>
+            </ul>
+            (If there is any literature I should add here please let me know.)
+
                 <h2>
                     Screenshots of Google Alert setup and results
                 </h2>
