Added link to honor code

--- a/teaching/alerts/index.html
+++ b/teaching/alerts/index.html
@@ -180,11 +180,18 @@ fragments from the assessment.
                     </li>
                     <li>
                     Chegg is indexed by Google. This is Chegg&rsquo;s choice, presumably because it drives
-traffic to their site and improves profits.
+                    traffic to their site.
                     </li>
                     <li>
-                    Chegg will takedown questions within a couple of days of a request, and provide
-account information of question submitter.
+                    Chegg will respond to takedown requests submitted via their
+                    &ldquo;<a
+                        href="https://www.chegg.com/honorcode/investigation-request">Honor
+                        Code</a>&rdquo; process. 
+                    </li>
+                    <li>
+                    Chegg will remove questions within a couple of days of a request, and provide
+account information of question submitter, as well as details of users who have
+accessed the question.
                     </li>
                     <li>
                     Typically this account information will not identify the student, as users can sign
