Added a pdf version of Classroom Note for download

--- a/teaching/alerts/index.html
+++ b/teaching/alerts/index.html
@@ -68,7 +68,11 @@
                 Nathan Clisby &amp; Antony Edwards (2021) 
                 <b>Individualized summative assessments as
                     used during COVID-19</b>, International Journal of Mathematical Education in
-Science and Technology, DOI: <a href="https://dx.doi.org/10.1080/0020739X.2021.1982040">10.1080/0020739X.2021.1982040</a>
+Science and Technology, DOI: <a
+    href="https://dx.doi.org/10.1080/0020739X.2021.1982040">10.1080/0020739X.2021.1982040</a>,
+<a
+    href="/research/publications/ClisbyEdwards2021IndividualisedSummativeAssessments.pdf">pdf
+    version</a>.
                 </p>
                 <p>
                 And, the material on this webpage was prepared as a <a
@@ -218,7 +222,11 @@ can occur purely based on question that has been shared.
                 Nathan Clisby &amp; Antony Edwards (2021) 
                 <b>Individualized summative assessments as
                     used during COVID-19</b>, International Journal of Mathematical Education in
-Science and Technology, DOI: <a href="https://dx.doi.org/10.1080/0020739X.2021.1982040">10.1080/0020739X.2021.1982040</a>
+Science and Technology, DOI: <a
+    href="https://dx.doi.org/10.1080/0020739X.2021.1982040">10.1080/0020739X.2021.1982040</a>,
+<a
+    href="/research/publications/ClisbyEdwards2021IndividualisedSummativeAssessments.pdf">pdf
+    version</a>.
                 </li>
             </ul>
             (If there is any literature I should add here please let me know.)
