Added list of organisers.

--- a/brak/index.html
+++ b/brak/index.html
@@ -40,6 +40,21 @@
             Speakers and schedule to be added.
             </p>
 <br/>
+<h3>Organisers</h3>
+<ul>
+    <li>
+    Nathan Clisby
+    </li>
+    <li>
+    Tim Garoni
+    </li>
+    <li>
+    Tony Guttmann
+    </li>
+    <li>
+    Aleks Owczarek
+    </li>
+</ul>
 <br/>
             <p style="font-size:0.8em">
             If you have any
