Added a few words and link to findingstones.

--- a/brak/index.html
+++ b/brak/index.html
@@ -39,6 +39,20 @@
             <p>
             Speakers and schedule to be added.
             </p>
+            <p>
+            Prior to the date of the symposiuam will add some photos and
+            biographical details to celebrate Richard, his research contributions,
+            and his contributions to the lattice statistical mechanics
+            community and the mathematical physics community (ANZAMP) more
+            broadly.
+            </p>
+            <p>
+            Richard was deeply interested in archaelogy, and over many years painstakingly
+            produced an accurate digital reconstruction of the 
+            palace at Knossos based on archaelogical data. See <a
+                href="http://findingstones.com/">http://findingstones.com/</a>
+            for some renderings.
+            </p>
 <br/>
 <h3>Organisers</h3>
 <ul>
