--- a/brak/index.html
+++ b/brak/index.html
@@ -48,7 +48,7 @@
             </p>
             <p>
             Richard was deeply interested in archaelogy, and over many years painstakingly
-            produced an accurate digital reconstruction of the 
+            produced an accurate 3d digital reconstruction of the 
             palace at Knossos based on archaelogical data. See <a
                 href="http://findingstones.com/">http://findingstones.com/</a>
             for some renderings.
