--- a/brak/index.html
+++ b/brak/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Memorial symposium for Richard Brak</title>
+    <title>Richard Brak Memorial Symposium</title>
     <link rel="canonical" href="/" />
     <meta name="description" content="Homepage of memorial symposium for Richard Brak 2022."> 
     <link rel="stylesheet" type="text/css" href="css/brak.css">
@@ -35,7 +35,6 @@
 
             On 7 February, 2022 we will be holding a symposium in memory of our
             dear friend and colleague Richard Brak.
-
             </p>
             <p>
             Speakers and schedule to be added.
