Added explanation of favicon.

--- a/brak/index.html
+++ b/brak/index.html
@@ -28,7 +28,7 @@
                 </h1>
                 <p>
                 <div class="image">
-                <img src="images/RichardBrak.jpg" alt="Ian" width="27%"
+                <img src="images/RichardBrak.jpg" alt="Richard Brak" width="27%"
                 style="float:right;min-width:100px;margin: 10px 0px 0px
                 10px" />
             </div>
@@ -70,6 +70,21 @@
     </li>
 </ul>
 <br/>
+            <p>
+            <figure>
+            <center>
+                <img src="images/CatalanConstructionCropped.jpg" alt="Joining
+                triangulated polygons" width="50%"
+                style="min-width:200px;margin: 10px 10px 10px 10px" />
+            </center>
+                <figcaption>
+                The image used for the site favicon is the result of the
+                product of two triangulations of regular polygons. Source:
+                <i><a href="https://arxiv.org/abs/1808.09078">A Universal
+                    Bijection for Catalan Structures</a></i> (2018).
+                </figcaption>
+            </figure>
+            </p>
             <p style="font-size:0.8em">
             If you have any
             comments or (especially) photos please contact <a
