--- a/brak/index.html
+++ b/brak/index.html
@@ -47,9 +47,9 @@
             broadly.
             </p>
             <p>
-            Richard was deeply interested in archaelogy, and over many years painstakingly
+            Richard was deeply interested in archaeology, and over many years painstakingly
             produced an accurate 3d digital reconstruction of the 
-            palace at Knossos based on archaelogical data. See <a
+            palace at Knossos based on archaeological data. See <a
                 href="http://findingstones.com/">http://findingstones.com/</a>
             for some renderings.
             </p>
